<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context="org.bostwickenator.googlephotos.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/checkBoxUploadRaw"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_raw" />

        <CheckBox
            android:id="@+id/checkBoxUploadVideos"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_videos" />

        <CheckBox
            android:id="@+id/checkBoxDeleteAfterUpload"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/delete_files_after_upload" />

        <Button
            android:id="@+id/buttonClearUploadDatabase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_upload_database" />
    </LinearLayout>

</ScrollView>

